0.15.0.0+rc1 - Update to PMWeather 0.15 - Added ColorMap#getWithBiome - Added ColorMaps#IR - ID Overlay now shows all enabled overlays - Added StormType filtering to NearbyStorms - PixelRenderData now has a Vec3 worldPos parameter - RenderData now has a sizeRenderDiameter property - Added RadarMode#IR - Added new parameters smoothWidth, cycloneWindspeed, and smoothWindspeed to StormBuilder - Added StormType util enum
Took 1 hour 55 minutes